updated fail fast, cleaned pom file
Added a timeout on fail-fast method to two second, updated the pom dependency and remove internal added jUNIT library causing issues