@@ -16,8 +16,8 @@ public class AsyncProcessorTest {
         when(mockService2.retrieveAsync(any())).thenReturn(CompletableFuture.completedFuture("World"));
 
         AsyncProcessor processor = new AsyncProcessor();
-//      CompletableFuture<String> resultFuture = processor.processAsync(List.of(mockService1, mockService2));
-        CompletableFuture<String> resultFuture = processor.processAsync(Arrays.asList(mockService1, mockService2));
+      CompletableFuture<String> resultFuture = processor.processAsync(List.of(mockService1, mockService2));
+//        CompletableFuture<String> resultFuture = processor.processAsync(Arrays.asList(mockService1, mockService2));
         CompletableFuture<String> resultFuture1 = processor.processAsyncFailFast(
                 Arrays.asList(mockService1, mockService2),
                 Arrays.asList("msg1", "msg2")
@@ -40,9 +40,11 @@ public class AsyncProcessorTest {
                 Arrays.asList(s1, s2),
                 Arrays.asList("message1", "message2")
         );
-        //No Partial result can be returned, result returns error when one fails 
-        assertThrows(ExecutionException.class, () -> result.get());
+        //No Partial result can be returned, result returns error when one fails with a timeout of 2 seconds
+        assertThrows(ExecutionException.class, () -> result.get(2, TimeUnit.SECONDS));
         assertTrue(result.isCompletedExceptionally());
+        
+
       
 }
   //Checking that Test succesfully
